# workload_allocation_chains

./: README.md
dat/Battarra,etal/: AP001.txt  AP002.txt  AP003.txt  AP004.txt  AP005.txt  AP006.txt  AP007.txt  AP008.txt  AP009.txt  AP010.txt  AP011.txt  AP012.txt  AP013.txt  AP014.txt  AP015.txt  AP016.txt  AP017.txt  AP018.txt  AP019.txt  AP020.txt  AP021.txt  AP022.txt  AP023.txt  AP024.txt  AP025.txt  AP026.txt  AP027.txt  AP028.txt  AP029.txt  AP030.txt  AP031.txt  AP032.txt  AP033.txt  AP034.txt  AP035.txt  AP036.txt  AP037.txt  AP038.txt  AP039.txt  AP040.txt  (+160 more)
dat/setII/: ap-16-46-0.txt  ap-16-47-0.txt  ap-16-48-0.txt  ap-16-48-2.txt  ap-16-52-1.txt  ap-16-53-0.txt  ap-16-54-2.txt  ap-16-55-3.txt  ap-16-57-1.txt  ap-16-58-1.txt  ap-16-59-0.txt  ap-16-60-0.txt  ap-16-60-3.txt  ap-16-61-1.txt  ap-16-62-1.txt  ap-16-64-2.txt  ap-16-67-0.txt  ap-16-67-1.txt  ap-16-67-3.txt  ap-17-45-3.txt  ap-17-47-3.txt  ap-17-50-0.txt  ap-17-50-2.txt  ap-17-52-3.txt  ap-17-53-2.txt  ap-17-54-0.txt  ap-17-55-0.txt  ap-17-56-1.txt  ap-17-58-2.txt  ap-17-65-1.txt  ap-17-67-2.txt  ap-18-43-2.txt  ap-18-44-0.txt  ap-18-46-2.txt  ap-18-48-1.txt  ap-18-49-0.txt  ap-18-49-2.txt  ap-18-51-3.txt  ap-18-52-2.txt  ap-18-53-1.txt  (+160 more)
dat/setIII/: ap-23-68-0.txt  ap-23-68-3.txt  ap-23-69-0.txt  ap-23-71-1.txt  ap-23-71-2.txt  ap-23-71-3.txt  ap-23-73-1.txt  ap-23-73-2.txt  ap-23-73-3.txt  ap-23-74-0.txt  ap-23-76-0.txt  ap-23-76-2.txt  ap-23-76-3.txt  ap-23-82-2.txt  ap-23-83-3.txt  ap-23-86-1.txt  ap-23-89-3.txt  ap-23-90-0.txt  ap-24-70-2.txt  ap-24-72-0.txt  ap-24-72-3.txt  ap-24-74-3.txt  ap-24-76-1.txt  ap-24-77-2.txt  ap-24-78-1.txt  ap-24-82-0.txt  ap-24-84-1.txt  ap-24-84-2.txt  ap-24-84-3.txt  ap-24-85-0.txt  ap-24-85-1.txt  ap-24-85-2.txt  ap-24-90-1.txt  ap-24-90-2.txt  ap-24-91-0.txt  (+165 more)
src/: CMakeLists.txt  ap.cpp  ap.hpp  beamSearch.cpp  beamSearch.hpp  bitvector.hpp  cbfs.cpp  cbfs.hpp  cbfsdfs.cpp  cbfsdfs.hpp  dimensions.hpp  dp.cpp  dp.hpp  ff.hpp  generate.cpp  generate.py  hs.cpp  hs.hpp  info.cpp  instance.cpp  instance.hpp  ip.cpp  ip.hpp  ipsolve.cpp  lb.cpp  lb.hpp  memory.cpp  memory.hpp  options.cpp  options.hpp  random.cpp  random.hpp  reducedIP.cpp  reducedIP.hpp  sadp.cpp  sadp.hpp  solution.cpp  solution.hpp  solver.cpp  solver.hpp  (+6 more)
src/cmake/: CMakeBuildTypes.cmake  Findcplex.cmake  version.cmake
src/scripts/: common.R  functions.R  functions.sh  tables.R  test.sh
